--- a/styles/rooms-section.module.css
+++ b/styles/rooms-section.module.css
@@ -14,6 +14,7 @@
   width: 40%; 
   min-height: 300px;
   min-width: 200px;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
